# CS50-Bill-Split

./: .gitignore  README.md  main.py  pyproject.toml
instance/: database.db
website/: __init__.py  auth.py  bill.py  models.py  views.py
website/static/: index.js  style.css
website/templates/: base.html  home.html  users.html
