[tool.poetry]
name = "repl_nix_CS50-Bill-Split"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-sqlalchemy = "^3.0.2"
SQLAlchemy = "^1.4.46"
Werkzeug = "^2.2.2"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
